# ableton-llm-control

./: .gitignore  TODO.md  mypy.ini  pyproject.toml
ableton_llm_control/: __init__.py  __main__.py  agent.py  finetune_text_classifier.py  recording.py  tools.py  transcription.py  ui.py
data/: command_examples.json
notebooks/: Demo.ipynb  FunctionsAgent.ipynb  Hello World.ipynb
