[tool.poetry]
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
description = "Control Ableton Live using natural language"
name = "ableton_llm_control"
packages = [{ include = "ableton_llm_control" }]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
langchain = "^0.1.8"
langchain-openai = "^0.0.7"
langchainhub = "^0.1.14"
langgraph = "^0.0.26"
pylive = "^0.4.0"
python-dotenv = "^1.0.1"
sounddevice = "^0.4.6"
torch = "^2.2.0"
transformers = { extras = ["torch"], version = "^4.37.2" }

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
datasets = "^2.17.0"
evaluate = "^0.4.1"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
mypy = "^1.8.0"
poetry-plugin-export = "^1.6.0"
pylint = "^3.0.3"
scikit-learn = "^1.4.1.post1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
